# cppFSM

./: README.md
examples/: CMakeLists.txt  fsm_example.cpp
include/: fsm.h
src/: fsm.cpp  fsm_event.cpp  fsm_state.cpp  fsm_transition.cpp
